[gd_scene load_steps=21 format=3 uid="uid://crxubcsmyb2mt"]

[ext_resource type="Script" path="res://scripts/character.gd" id="1_lfxkg"]
[ext_resource type="Texture2D" uid="uid://1ep7yt367xpe" path="res://assets/sprites/kenney/ship-0a.png" id="2_2d64c"]
[ext_resource type="AudioStream" uid="uid://c7ts4rxxvcoum" path="res://assets/audio/446120__justinvoke__engine-loop-4.ogg" id="3_m406k"]
[ext_resource type="Texture2D" uid="uid://2l75key1m0l0" path="res://assets/sprites/kenney/ship-1a.png" id="3_o6swu"]
[ext_resource type="AudioStream" uid="uid://bdjjlw72i6dux" path="res://assets/audio/kenney/tone1_looped.ogg" id="4_84pe2"]
[ext_resource type="Texture2D" uid="uid://b55al5mkfg2gv" path="res://assets/sprites/kenney/ship-2a.png" id="4_335q0"]
[ext_resource type="Texture2D" uid="uid://gsrvc26d5qlj" path="res://assets/sprites/kenney/ship-3a.png" id="5_envwp"]
[ext_resource type="Texture2D" uid="uid://betrv2k6slmr4" path="res://assets/sprites/kenney/ship-4a.png" id="6_ken6e"]
[ext_resource type="Texture2D" uid="uid://n8be8g640vfa" path="res://assets/sprites/kenney/ship-0b.png" id="7_ng0rf"]
[ext_resource type="Texture2D" uid="uid://o78cchg2cs75" path="res://assets/sprites/kenney/ship-1b.png" id="8_t3num"]
[ext_resource type="Texture2D" uid="uid://cn656femiuuf5" path="res://assets/sprites/kenney/ship-2b.png" id="9_bs2qm"]
[ext_resource type="Texture2D" uid="uid://beid5v3esdm60" path="res://assets/sprites/kenney/ship-3b.png" id="10_cp8yv"]
[ext_resource type="Texture2D" uid="uid://csbk76c1rc850" path="res://assets/sprites/kenney/ship-4b.png" id="11_nejuo"]
[ext_resource type="AudioStream" uid="uid://tct8s7lvite" path="res://assets/audio/262604__erictuten__wind-through-a-pipe_edited.ogg" id="12_ggesn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5cqbh"]
radius = 16.0
height = 46.0

[sub_resource type="Gradient" id="Gradient_mlxpc"]
offsets = PackedFloat32Array(0, 0.793991, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ylyty"]
gradient = SubResource("Gradient_mlxpc")

[sub_resource type="Curve" id="Curve_jrjes"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.503788, 0.863158), -0.438781, -0.438781, 0, 0, Vector2(0.829545, 0.652632), -0.826174, -0.826174, 0, 0, Vector2(1, 0), -4.93039, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_x1sp4"]
curve = SubResource("Curve_jrjes")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dkq2r"]
emission_shape = 1
emission_sphere_radius = 5.0
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 30.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 30.0
angular_velocity_min = -40.0
angular_velocity_max = 40.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
linear_accel_min = -8.0
linear_accel_max = -3.0
scale_min = 5.0
scale_max = 10.0
scale_curve = SubResource("CurveTexture_x1sp4")
color = Color(0.392157, 0.392157, 0.392157, 0.588235)
color_ramp = SubResource("GradientTexture1D_ylyty")
hue_variation_min = -0.01
hue_variation_max = 0.01

[node name="MainCharacter" type="Area2D" groups=["Teleportable"]]
texture_filter = 1
collision_layer = 17
collision_mask = 5
script = ExtResource("1_lfxkg")
acceleration = 75.0
rot_acceleration = 5.0
friction = 1.5
rot_friction = 2.0
sprites_no_engine = Array[Texture2D]([ExtResource("2_2d64c"), ExtResource("3_o6swu"), ExtResource("4_335q0"), ExtResource("5_envwp"), ExtResource("6_ken6e")])
sprites_engine = Array[Texture2D]([ExtResource("7_ng0rf"), ExtResource("8_t3num"), ExtResource("9_bs2qm"), ExtResource("10_cp8yv"), ExtResource("11_nejuo")])
audiostream_better_engine = ExtResource("12_ggesn")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = 10
scale = Vector2(2, 2)
texture = ExtResource("2_2d64c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5cqbh")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_dkq2r")
lifetime = 10.0
randomness = 0.3

[node name="EngineAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_m406k")
volume_db = -15.0
pitch_scale = 0.01
autoplay = true
bus = &"World"

[node name="BeepAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_84pe2")
volume_db = -12.0
bus = &"Beep"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
